<resources>
    <string name="app_name">FoodyRealTime</string>
    <string name="name_version">Phiên bản</string>
    <string name="loading">Đang tải...</string>
    <string name="name_company">Sơn Vs Lan</string>
    <string name="btnLogin">Đăng Nhập</string>
    <string name="btnRegister">Đăng Ký</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Pasword</string>
    <string name="hintComfirmPassword">Cormfirm Pasword</string>
    <string name="textOR">Hoặc</string>
    <string name="facebook_app_id">Facebook App ID</string>
    <string name="app_id">baa6152b05beaf3d9e7b37d9370cba0d</string>
    <string name="dangnhapbangfacebook">Đăng nhập bằng Facebook</string>
    <string name="dangnhapbanggoogle">Đăng nhập bằng Google</string>
    <string name="forgetpassword">Quên mật khẩu ?</string>
    <string name="register"><u>Đăng ký mới</u></string>
    <string name="thongbaoloiEmailDK">Bạn chưa nhập Email</string>
    <string name="thongbaoloimatkhauDK">Bạn chưa nhập PassWord</string>
    <string name="thongbaonhaplaiMK">Vui lòng nhập giống mật khẩu ở trên !</string>
    <string name="thongbaoDKthanhcong">Bạn đã đăng kí thành công !</string>
    <string name="dangxuli">Đang xử lí...</string>
    <string name="dangnhapthatbai">Tài khoản không hợp lệ</string>
    <string name="khoiphucmk">Khôi phục mật khẩu</string>
    <string name="chuoikhoiphucmk">Bạn vui lòng nhập địa chỉ Email vào khung bên dưới để khôi phục mật khẩu !!</string>
    <string name="sendemail">Send Email</string>
    <string name="chuoithanhvien">Bạn không phải là thành viên ?</string>
    <string name="Emailkhonghople">Email không hợp lề. Vui lòng nhập đúng định dạng Email</string>
    <string name="guiMKquaEmail">Send Email SuccessFully!!</string>
    <string name="odau">Ở đâu</string>
    <string name="angi">Ăn gì?</string>
    <string name="moinhat">Moi nhat</string>
    <string name="danhmuc">Danh muc</string>
    <string name="khuvuc">HN</string>
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="gameandfun">Game and fun</string>
    <string name="danhgia">Review</string>
    <string name="blog">Blog</string>
    <string name="topmember">Top member</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datmon">Đặt món</string>
    <string name="title_activity_chi_tiet_quan_an">ChiTietQuanAnActivity</string>

    <string name="taianh">Tải ảnh</string>
    <string name="luulai">Lưu lại</string>
    <string name="binhluan">Bình luận</string>
    <string name="checkin">Check-in</string>
    <string name="chiase">Chia sẻ</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="capnhatwifi">Cập nhật wifi</string>
    <string name="nhaptenwifi">Nhập tên wifi</string>
    <string name="nhapmatkhauwifi">Nhập mật khẩu wifi</string>
    <string name="dongy">Đồng ý</string>
    <string name="loithemwifi">Vui lòng nhập đầy đủ thông tin wifi</string>
    <string name="themthanhcong">Thêm thành công ! </string>
    <string name="dang">Đăng</string>
    <string name="thucdon">Thực đơn</string>
    <string name="tenquanan">Tên quán ăn</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="tenmon">Tên món</string>
    <string name="giatien">Giá tiền</string>
    <string name="luuquanan">Lưu quán ăn</string>
    <string name="themthucdon">Thêm thực đơn</string>

</resources>