<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/food7"
    tools:context=". View.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        android:background="@color/tranparentBackgroudLogin"

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="-70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imageView"
                android:layout_width="330dp"
                android:layout_height="127dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="ShareFood.vn"
                android:textColor="#FDFDFD"
                android:textSize="44sp"
                android:textStyle="bold"
                android:width="20dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/khoiphucmk"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginBottom="10dp"
                android:text="@string/chuoikhoiphucmk"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtEmailKP"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF" />


            <Button
                android:id="@+id/btnSendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/radius_button"
                android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
                android:drawableTint="#FF0000"
                android:fontFamily="sans-serif"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/sendemail"
                android:textAllCaps="false"
                android:textColor="#FF0000" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chuoithanhvien"
                    android:textColor="#332E2E" />

                <TextView
                    android:id="@+id/txtDangkiKP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>