<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgChupHinh"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/img_mini_themhinh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edTenMon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenmon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edGiaTien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/giatien"
                    android:text="0" />

                <Spinner
                    android:id="@+id/spinnerThucDon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Spinner>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnThemThucDon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themthucdon" />
</LinearLayout>