<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundHomeApp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/group_tab_radio"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_moinhat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/changebackground_tab"
                android:button="@android:color/transparent"
                android:checked="true"
                android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/moinhat"
                android:textColor="@drawable/changetext_tab_homeapp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundHomeApp" />

            <RadioButton
                android:id="@+id/rd_danhmuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/changebackground_tab"
                android:button="@android:color/transparent"
                android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/danhmuc"
                android:textColor="@drawable/changetext_tab_homeapp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundHomeApp" />

            <RadioButton
                android:id="@+id/rd_khuvuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/changebackground_tab"
                android:button="@android:color/transparent"
                android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/khuvuc"
                android:textColor="@drawable/changetext_tab_homeapp" />
        </RadioGroup>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/nearby"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/gantoi"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/order"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/giaohang"
                        android:textAllCaps="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/gameandfun"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/gameandfun"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/review"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/danhgia"
                        android:textAllCaps="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/blog"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/blog"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/user"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:text="@string/topmember"
                        android:textAllCaps="false" />

                </LinearLayout>

                <view
                    class="androidx.appcompat.app.AlertController$RecycleListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </view>

                <!--nhung component co scroll khong dung voi nhau-->
                <view
                    android:id="@+id/recycleODau"
                    class="androidx.recyclerview.widget.RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="516dp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>